--- a/crud/package.json
+++ b/crud/package.json
@@ -12,6 +12,7 @@
   "author": "prashant",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "nodemon": "^1.18.9"
